I Forgor What Did i Change

--- a/App.config
+++ b/App.config
@@ -22,6 +22,26 @@
     <add key="Tualan Hulu" value="https://www.windy.com/-1.867/112.774/meteogram?gfs,-1.969,112.774,11,m:dB2aji6"/>
     <add key="Kuala Pembuang" value="https://www.windy.com/-3.387/112.543/meteogram?gfs,-4.207,112.544,8,m:dzwajiJ"/>
     <add key="Seruyan Hilir" value="https://www.windy.com/-3.254/112.434/meteogram?gfs,-3.459,112.434,10,m:dzJajiy"/>
+		
+	<add key="0" value="Baamang"/>
+	<add key="1" value="Antang Kalang"/>
+    <add key="2" value="Bukit Sentuai"/>
+    <add key="3" value="Cempaga"/>
+    <add key="4" value="Cempaga Hulu"/>
+    <add key="5" value="Kota Besi"/>
+    <add key="6" value="Mentawa Baru Ketapang"/>
+    <add key="7" value="Mentaya Hilir Selatan"/>
+    <add key="8" value="Mentaya Hilir Utara"/>
+    <add key="9" value="Mentaya Hulu"/>
+    <add key="10" value="Parenggean"/>
+    <add key="11" value="Pulau Hanaut"/>
+    <add key="12" value="Seranau"/>
+    <add key="13" value="Telaga Antang"/>
+    <add key="14" value="Telawang"/>
+    <add key="15" value="Teluk Sampit"/>
+    <add key="16" value="Tualan Hulu"/>
+    <add key="17" value="Kuala Pembuang"/>
+    <add key="18" value="Seruyan Hilir"/>
     
 
     <add key="Save Location" value="Saved\\"/>
