fuc forgor to change the config key name

--- a/App.config
+++ b/App.config
@@ -44,7 +44,7 @@
     <add key="18" value="Seruyan Hilir"/>
     
 
-    <add key="Save Location" value="Saved\\"/>
+    <add key="dir" value="Saved\\"/>
 		
 	</appSettings>
 	
