Fixing Can't Update To Newer Version Of ChromeDriver And Adding Some New Setting For Widht and Height Of The Resolution

--- a/App.config
+++ b/App.config
@@ -47,6 +47,9 @@
     <add key="dir" value="Saved\\"/>
 	<add key="jumlah" value="20"/>
 	<add key="judul" value="Windy.com"/>
+
+		<add key="W" value="1280"/>
+		<add key="H" value="720"/>
 		
 	</appSettings>
 	
